# USDA-CORN_prediction

./: README.md  guide.md  pyproject.toml  requirements.txt
data/raw/: USDA_corn_yield_national_bu_acre.csv  USDA_corn_yield_state_bu_acre.csv
src/: full_model_workflow.ipynb
